--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.29.0",
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0"
+    "react-dom": "18.3.1",
+    "react": "18.3.1",
+    "i18next": "23.11.5",
+    "react-i18next": "14.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
